# cntx-rs

./: .actrc  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: ask.rs  auth.rs  cli.rs  config.rs  install.rs  main.rs  mcp.rs  resources.rs  temp_paths.rs  validation.rs
src/agent/: git.rs  mod.rs  runtime.rs  sandbox.rs  tools.rs  types.rs  workspace.rs
src/providers/: anthropic.rs  catalog.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs  transport.rs
