[package]
name = "cntx-rs"
version = "0.1.0"
edition = "2024"
description = "A local-first Rust CLI and stdio MCP server for asking grounded questions over code and docs."
license = "GPL-3.0-only"
repository = "https://github.com/bingbr/cntx-rs"
readme = "README.md"
exclude = [".github/"]

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0.0"
globset = "0.4"
ignore = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }
rpassword = "7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[profile.release]
strip = true
lto = true